# Fles

./: .gitignore  README.md
Fles/: CMakeLists.txt
Fles/FlesTests/: test.fls
Fles/src/: Program.java
Fles/src/com/insotheo/fles/: SourceFile.java
Fles/src/com/insotheo/fles/ast/: ASTNode.java  AssignmentNode.java  BinaryOperationNode.java  BlockNode.java  BooleanNode.java  CharLiteral.java  ConditionBlock.java  DeleteNode.java  FunctionCallNode.java  FunctionNode.java  IfBranch.java  ModuleNode.java  NotNode.java  NumberNode.java  ParameterNode.java  QualifiedIdentifierNode.java  ReturnNode.java  StringLiteralNode.java  VariableNode.java  WhileLoop.java
Fles/src/com/insotheo/fles/interpreter/: FlesEvaluate.java  FlesInterpreter.java  InterpreterData.java  InterpreterExceptions.java
Fles/src/com/insotheo/fles/interpreter/blocks/: FlesFunction.java  InterpreterBlock.java
Fles/src/com/insotheo/fles/interpreter/data/: BlockReturn.java  DataType.java  FlesValue.java  FlesVariable.java  FunctionStack.java  Module.java  ModuleStack.java  ValueType.java  VariableStack.java
Fles/src/com/insotheo/fles/interpreter/std/: StdFunctionsImpl.java  StdPrintFunction.java  StdPrintlnFunction.java
Fles/src/com/insotheo/fles/interpreter/sys/: ConsoleModule.java
Fles/src/com/insotheo/fles/lexer/: Lexer.java  Token.java  TokenType.java  TokenTypeDecoder.java  Vector2D.java
Fles/src/com/insotheo/fles/parser/: DeleteTypeValue.java  OperationValue.java  Parser.java  ParserExceptions.java
Fles/src/com/insotheo/fles/token/: Lexer.java  Token.java  TokenType.java
(+21 files in other folders)
